# WADG_ANN

./: .gitignore  CMakeLists.txt  gmon.out
anals/: anals_debug.py  pure_data_max_search_length.csv  pure_data_search_points.csv  pure_data_start_points.csv
figures/WADG_figures/: nsg.csv  plot.py  record.xlsx  wadg.csv
include/efanna2e/: index.h  index_nsg.h  index_wadg.h  lru_cache.h  neighbor.h
src/: index_nsg.cpp  index_nsg.cpp.bak  index_wadg.cpp  index_wadg.cpp.multi_linklist  index_wadg.cpp.multi_randomPoints  index_wadg.cpp.multi_thread_linklist  index_wadg.cpp.single  lru_cache.cpp
tests/: CMakeLists.txt  test_cal_top_K_precision.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp  test_wadg_search.cpp
trace_analysis/: fvecs_length_analysis.py  readme.md  trace_analysis.py
